# rajvoicecloner

./: README.md  pyproject.toml
conf/rajvoicecloner_v1/: rajvoicecloner_finetune_all.yaml  rajvoicecloner_finetune_lora.yaml
conf/rajvoicecloner_v1.5/: rajvoicecloner_finetune_all.yaml  rajvoicecloner_finetune_lora.yaml
conf/rajvoicecloner_v2/: rajvoicecloner_finetune_all.yaml  rajvoicecloner_finetune_lora.yaml
scripts/: test_pick_runtime_dtype.py  test_rajvoicecloner_ft_infer.py  test_rajvoicecloner_lora_infer.py  train_rajvoicecloner_finetune.py
src/rajvoicecloner/: __init__.py  cli.py  core.py
src/rajvoicecloner/model/: __init__.py  rajvoicecloner.py  rajvoicecloner2.py  utils.py
src/rajvoicecloner/modules/locdit/: __init__.py  local_dit.py  local_dit_v2.py  unified_cfm.py
src/rajvoicecloner/modules/locenc/: __init__.py  local_encoder.py
src/rajvoicecloner/server/: __init__.py  agents.py  app.py  audio.py  branding.py  config.py  engine.py  history.py  llm.py  realtime.py  schemas.py  settings.py  voices.py
src/rajvoicecloner/server/static/: app.js  index.html  styles.css
src/rajvoicecloner/training/: __init__.py  config.py  data.py  packers.py  validate.py
tests/: test_cli.py  test_lora_checkpoint_loading.py  test_model_utils.py  test_validate.py
